update pytorch basic models

--- a/leetcodes/array_basic.ipynb
+++ b/leetcodes/array_basic.ipynb
@@ -724,6 +724,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Without memoization, it takes 0.316730 seconds.\nWith memoization, it takes 0.0000648 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 带有memoization的实现\n",
+    "def fib_m_helper(n, computed):\n",
+    "    if n in computed:\n",
+    "        return computed[n]\n",
+    "    computed[n] = fib_m_helper(n - 1, computed) + fib_m_helper(n - 2, computed)\n",
+    "    return computed[n]\n",
+    "\n",
+    "def fib_m(n):\n",
+    "    return fib_m_helper(n, {0: 0, 1: 1})\n",
+    "\n",
+    "# 没有memoization的实现\n",
+    "def fib_helper(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    return fib_helper(n - 1) + fib_helper(n - 2)\n",
+    "\n",
+    "def fib(n):\n",
+    "    \"\"\" fib is a wrapper function so that later we can change its behavior\n",
+    "    at the top level without affecting the behavior at every recursion step.\n",
+    "    \"\"\"\n",
+    "    return fib_helper(n)\n",
+    "\n",
+    "for n in range(20):\n",
+    "    assert fib(n) == fib_m(n)\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "fib(30)\n",
+    "print(f'Without memoization, it takes {time.time() - start:7f} seconds.')\n",
+    "\n",
+    "start = time.time()\n",
+    "fib_m(30)\n",
+    "print(f'With memoization, it takes {time.time() - start:.7f} seconds.')\n",
+    "\n"
+   ]
+  },
+  {
    "source": [
     "### 70: 爬楼梯"
    ],
