--- a/pytorch/basic_models/convolutional_neural_network.ipynb
+++ b/pytorch/basic_models/convolutional_neural_network.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "卷积神经网络: 两个卷积层(nn.Module/nn.Sequential)\n",
+    "卷积神经网络: MNIST分类\n",
+    "    两个卷积层(nn.Module/nn.Sequential)\n",
     "    nn.Conv2d()\n",
     "    nn.BatchNorm2d(16)\n",
     "    nn.ReLU()\n",
