--- a/pytorch/basic_models/deep_residual_network.ipynb
+++ b/pytorch/basic_models/deep_residual_network.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "残差网络:\n",
+    "残差网络: CIFAR10分类\n",
     "    conv+bn+relu\n",
     "    3 ResidualBlock(和标准卷积网络类似): nn.Sequential\n",
     "    AvgPool2d\n",
