--- a/pytorch/basic_models/feedforward_neural_network.ipynb
+++ b/pytorch/basic_models/feedforward_neural_network.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "前馈神经网络: 具有一个隐含层的全连接网络(nn.Module)\n",
+    "前馈神经网络: MNIST分类\n",
+    "    具有一个隐含层的全连接网络(nn.Module)\n",
     "    nn.Linear\n",
     "    nn.ReLU()\n",
     "    nn.Linear\n",
