--- a/pytorch/basic_models/generative_adversarial_network.ipynb
+++ b/pytorch/basic_models/generative_adversarial_network.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "生成对抗网络:\n",
+    "生成对抗网络: MNIST图像生成\n",
     "    只使用训练数据，训练时创建伪标签\n",
     "    分别定义生成器和判别器，三个线性层\n",
     "    使用二元交叉熵损失\n",
