--- a/pytorch/basic_models/language_model/main.ipynb
+++ b/pytorch/basic_models/language_model/main.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "语言模型: \n",
+    "语言模型: PTB语言建模\n",
     "    nn.Embedding(vocab_size, embed_size)\n",
     "    nn.LSTM\n",
     "    nn.Linear(hidden_size, vocab_size)\n",
