--- a/pytorch/basic_models/linear_regression.ipynb
+++ b/pytorch/basic_models/linear_regression.ipynb
@@ -29,7 +29,8 @@
   {
    "source": [
     "'''\n",
-    "线性回归: nn.Linear\n",
+    "线性回归: 自定义连续输入输出\n",
+    "    nn.Linear\n",
     "'''"
    ],
    "cell_type": "code",
