--- a/pytorch/basic_models/logistic_regression.ipynb
+++ b/pytorch/basic_models/logistic_regression.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "逻辑回归: nn.Linear+softmax\n",
+    "逻辑回归: MNIST分类\n",
+    "    nn.Linear+softmax\n",
     "'''"
    ]
   },
