--- a/pytorch/basic_models/recurrent_neural_network.ipynb
+++ b/pytorch/basic_models/recurrent_neural_network.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "循环神经网络: LSTM\n",
+    "循环神经网络: MNIST分类\n",
     "    nn.LSTM+nn.Linear\n",
     "'''"
    ]
