--- a/pytorch/basic_models/bidirectional_recurrent_neural_network.ipynb
+++ b/pytorch/basic_models/bidirectional_recurrent_neural_network.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "双向循环神经网络: LSTM\n",
+    "双向循环神经网络: MNIST分类\n",
+    "    LSTM\n",
     "'''"
    ]
   },
