--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 1
     }
    ],
    "source": [
@@ -115,7 +115,7 @@
    "source": [
     "# 张量的创建\n",
     "# torch.Tensor(size)\n",
-    "# .random_() | .resize_() | .zero_()\n",
+    "# .random_() | .resize_() | .zero_() | .mul_()\n",
     "example = torch.Tensor(2, 3, 4)\n",
     "print(example)\n",
     "print(example.random_(10)) # 0-9\n",
@@ -124,6 +124,150 @@
     "print(r)\n",
     "print(r.zero_())\n",
     "print(example) # 值全变为0，size不变"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0 1 2 3 4] tensor([0, 1, 2, 3, 4])\n[0 2 4 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "n_np = np.arange(5)\n",
+    "n = torch.from_numpy(n_np)\n",
+    "print(n_np, n)\n",
+    "n.mul_(2)\n",
+    "print(n_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([1., 2., 3., 4.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "# torch.Tensor创建一维张量\n",
+    "v = torch.Tensor([1, 2, 3, 4])\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "dim: 1, size: torch.Size([4]), 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'dim: {v.dim()}, size: {v.size()}, {v.size()[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[2., 5., 3., 7.],\n",
+       "        [4., 2., 1., 9.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# torch.Tensor创建二维张量\n",
+    "m = torch.Tensor([[2, 5, 3, 7],\n",
+    "                  [4, 2, 1, 9]])\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2 -- 4 -- torch.Size([2, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m.size(0), m.size(1), m.size(), sep=' -- ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[2., 4.],\n        [5., 2.],\n        [3., 1.],\n        [7., 9.]])\ntensor([[2., 4.],\n        [5., 2.],\n        [3., 1.],\n        [7., 9.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 矩阵转置: .t() | .transpose(0, 1)\n",
+    "print(m.t())\n",
+    "print(m.transpose(0, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor(3.)\ntensor(3.)\ntensor([5., 2.])\ntensor([[5.],\n        [2.]])\ntensor([[2., 5., 3., 7.]])\ntensor([2., 5., 3., 7.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 从矩阵中获取值\n",
+    "print(m[0][2])\n",
+    "print(m[0, 2])\n",
+    "print(m[:, 1])\n",
+    "print(m[:, [1]])\n",
+    "print(m[[0], :])\n",
+    "print(m[0, :])"
    ]
   },
   {
@@ -188,6 +332,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[0., 0., 0., 0., 0.],\n        [0., 0., 0., 0., 0.],\n        [0., 0., 0., 0., 0.]])\ntensor([[[1., 1., 1., 1., 1.],\n         [1., 1., 1., 1., 1.]],\n\n        [[1., 1., 1., 1., 1.],\n         [1., 1., 1., 1., 1.]],\n\n        [[1., 1., 1., 1., 1.],\n         [1., 1., 1., 1., 1.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.zeros | torch.ones\n",
+    "print(torch.zeros(3, 5))\n",
+    "print(torch.ones(3, 2, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -208,6 +371,43 @@
     "e = torch.eye(3)\n",
     "print(e)\n",
     "print(e.type())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([3., 4., 5., 6., 7., 8.])\ntensor([ 5.7000,  2.7000, -0.3000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.arange()\n",
+    "print(torch.arange(3., 8 + 1))\n",
+    "print(torch.arange(5.7, -2.1, -3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[3.0000, 3.2632, 3.5263, 3.7895, 4.0526, 4.3158, 4.5789, 4.8421, 5.1053,\n         5.3684, 5.6316, 5.8947, 6.1579, 6.4211, 6.6842, 6.9474, 7.2105, 7.4737,\n         7.7368, 8.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.linspace\n",
+    "print(torch.linspace(3, 8, 20).view(1, -1)) # 包含首尾值"
    ]
   },
   {
@@ -336,6 +536,9 @@
     "tensor = tensor.cpu() | .cpu().data.numpy()/.data.cpu().numpy()  .data是获取tensor    把tensor转换成numpy的格式(array)\n",
     "tensor = tensor.float()\n",
     "tensor = tensor.long()\n",
+    "\n",
+    "tensor.double()\n",
+    "tensor.byte()\n",
     "'''"
    ]
   },
@@ -734,6 +937,25 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([ 1,  4,  9, 16]) tensor([1, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .pow()\n",
+    "v = torch.arange(1, 4 + 1)\n",
+    "print(v.pow(2), v)"
+   ]
+  },
+  {
    "source": [
     "### 最值"
    ],
@@ -774,10 +996,62 @@
   },
   {
    "source": [
-    "### 矩阵乘法"
+    "### 张量乘法"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([1., 0., 6., 0.])\ntensor(7.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 向量乘法\n",
+    "v = torch.Tensor([1, 2, 3, 4])\n",
+    "w = torch.Tensor([1, 0, 2, 0])\n",
+    "# Element-wise multiplication\n",
+    "print(v * w)\n",
+    "# Scalar product: 1*1 + 2*0 + 3*2 + 4*0\n",
+    "print(v @ w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([49., 47.])\ntensor([49.])\ntensor([47.])\ntensor([[2.2896, 5.5337, 3.7080, 7.5709],\n        [4.7920, 2.9082, 1.4325, 9.3150]])\ntensor([[1.9789, 4.5636, 2.1189, 6.2250],\n        [3.3828, 1.8659, 0.9549, 8.3280]])\ntensor([[1.8954, 2.9634, 0.5125, 1.1755],\n        [0.9201, 1.2237, 0.4617, 1.2716]])\ntensor([[ 2.1045,  7.6293, 56.9419, 21.9433],\n        [ 5.3438,  2.6585,  3.1869, 21.9861]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 向量和矩阵乘法\n",
+    "v = torch.arange(1., 4 + 1)\n",
+    "m = torch.Tensor([[2, 5, 3, 7],\n",
+    "                  [4, 2, 1, 9]])\n",
+    "# Scalar product\n",
+    "print(m @ v)\n",
+    "# Calculated by 1*2 + 2*5 + 3*3 + 4*7\n",
+    "print(m[[0], :] @ v)\n",
+    "print(m[[1], :] @ v)\n",
+    "print(m + torch.rand(2, 4))\n",
+    "print(m - torch.rand(2, 4))\n",
+    "print(m * torch.rand(2, 4))\n",
+    "print(m / torch.rand(2, 4))"
+   ]
   },
   {
    "cell_type": "code",
@@ -793,6 +1067,7 @@
     }
    ],
    "source": [
+    "# 矩阵乘法\n",
     "tensor1 = torch.tensor([[0,1,2], [2,4,1]])\n",
     "tensor2 = torch.tensor([[0,1], [2,4], [1,2]])\n",
     "print(tensor1.shape)\n",
