add dgl and graph4nlp

--- a/pytorch/graph_neural_networks/quick_start_pytorch_geometric.ipynb
+++ b/pytorch/graph_neural_networks/quick_start_pytorch_geometric.ipynb
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = TUDataset(root='data/ENZYMES', name='ENZYMES')"
+    "dataset = TUDataset(root='py_geo_data/ENZYMES', name='ENZYMES')"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Planetoid(root='data/Cora', name='Cora') # 若遇到错误RemoteDisconnected: Remote end closed connection without response，则可直接从github上下载原始数据到目录data/Cora下"
+    "dataset = Planetoid(root='py_geo_data/Cora', name='Cora') # 若遇到错误RemoteDisconnected: Remote end closed connection without response，则可直接从github上下载原始数据到目录data/Cora下"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = TUDataset(root='data/ENZYMES', name='ENZYMES', use_node_attr=True)\n",
+    "dataset = TUDataset(root='py_geo_data/ENZYMES', name='ENZYMES', use_node_attr=True)\n",
     "loader = DataLoader(dataset, batch_size=32, shuffle=True)"
    ]
   },
@@ -471,7 +471,7 @@
    ],
    "source": [
     "from torch_geometric.datasets import ShapeNet\n",
-    "dataset = ShapeNet(root='data/ShapeNet', categories=['Airplane']) # 点云数据集，包含17000个3D形状的点云，共有16个形状类别"
+    "dataset = ShapeNet(root='py_geo_data/ShapeNet', categories=['Airplane']) # 点云数据集，包含17000个3D形状的点云，共有16个形状类别"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "source": [
     "# 通过生成最近邻图来将点云数据集变换成图数据集\n",
     "import torch_geometric.transforms as T\n",
-    "dataset = ShapeNet(root='data/ShapeNet', categories=['Airplane'],\n",
+    "dataset = ShapeNet(root='py_geo_data/ShapeNet', categories=['Airplane'],\n",
     "                    pre_transform=T.KNNGraph(k=6)) # 需要先删除之前生成的processed; 还可添加参数transform=T.RandomTranslate(0.01)\n",
     "print(dataset[0])\n"
    ]
@@ -537,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Planetoid(root='data/Cora', name='Cora')"
+    "dataset = Planetoid(root='py_geo_data/Cora', name='Cora')"
    ]
   },
   {
