--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -2554,6 +2554,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.09090909 0.18181818 0.27272727 0.36363636 0.45454545 0.54545455\n 0.63636364 0.72727273 0.81818182 0.90909091]\n[0.         0.09090909 0.18181818 0.27272727 0.36363636 0.45454545\n 0.54545455 0.63636364 0.72727273 0.81818182 0.90909091]\n[0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.linspace\n",
+    "Z = np.linspace(0,1,11,endpoint=False)[1:]\n",
+    "print(Z)\n",
+    "print(np.linspace(0,1,11,endpoint=False))\n",
+    "print(np.linspace(0,1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -2682,6 +2703,51 @@
    "source": [
     "# np.tile\n",
     "Z = np.tile( np.array([[0,1],[1,0]]), 4) \n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 1. 2. 3. 4.]\n [0. 1. 2. 3. 4.]\n [0. 1. 2. 3. 4.]\n [0. 1. 2. 3. 4.]\n [0. 1. 2. 3. 4.]]\n[[0 1 2 3 4]\n [0 1 2 3 4]\n [0 1 2 3 4]\n [0 1 2 3 4]\n [0 1 2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.zeros((5,5))\n",
+    "Z += np.arange(5)\n",
+    "print(Z)\n",
+    "\n",
+    "# without broadcasting\n",
+    "Z = np.tile(np.arange(0, 5), (5,1))\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 从生成器函数创建数组\n",
+    "def generate():\n",
+    "    for x in range(10):\n",
+    "        yield x\n",
+    "Z = np.fromiter(generate(),dtype=float,count=1) # 参数count表示从数组缓冲区中读取的项目数，-1表示全部读取\n",
     "print(Z)"
    ]
   },
@@ -2830,6 +2896,30 @@
     "\n",
     "# 或者\n",
     "print(np.where(Z>0, np.ceil(Z), np.floor(Z)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5.14404168 1.97897059 8.38653561 9.2737273  1.92440973 8.58379532\n 7.45066443 0.13041476 2.21465363 9.66850459]\n[5. 1. 8. 9. 1. 8. 7. 0. 2. 9.]\n[5. 1. 8. 9. 1. 8. 7. 0. 2. 9.]\n[5. 1. 8. 9. 1. 8. 7. 0. 2. 9.]\n[5 1 8 9 1 8 7 0 2 9]\n[5. 1. 8. 9. 1. 8. 7. 0. 2. 9.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 得到数组每个元素的整数部分\n",
+    "Z = np.random.uniform(0,10,10)\n",
+    "print(Z)\n",
+    "print(Z - Z%1)\n",
+    "print(Z // 1)\n",
+    "print(np.floor(Z))\n",
+    "print(Z.astype(int))\n",
+    "print(np.trunc(Z))"
    ]
   },
   {
@@ -2996,6 +3086,98 @@
     "print(np.array(0) / np.array(0))\n",
     "print(np.array(0) // np.array(0))\n",
     "print(np.array([np.nan]).astype(int).astype(float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "nan\n",
+      "1j\n",
+      "/home/yaoqf/miniconda3/envs/dynamicgcn/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 开方\n",
+    "print(np.sqrt(-1))\n",
+    "print(np.emath.sqrt(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1. 1. 1.] [2. 2. 2.]\n[3. 3. 3.]\n[0.5 0.5 0.5]\n[-0.5 -0.5 -0.5]\n[-1.5 -1.5 -1.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 原地进行计算\n",
+    "A = np.ones(3)*1\n",
+    "B = np.ones(3)*2\n",
+    "print(A,B)\n",
+    "np.add(A,B,out=B)\n",
+    "print(B)\n",
+    "np.divide(A,2,out=A)\n",
+    "print(A)\n",
+    "np.negative(A,out=A)\n",
+    "print(A)\n",
+    "np.multiply(A,B,out=A)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-06-14\n2021-06-15\n2021-06-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 日期\n",
+    "yesterday = np.datetime64('today') - np.timedelta64(1)\n",
+    "today     = np.datetime64('today')\n",
+    "tomorrow  = np.datetime64('today') + np.timedelta64(1)\n",
+    "print(yesterday)\n",
+    "print(today)\n",
+    "print(tomorrow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['2016-07-01' '2016-07-02' '2016-07-03' '2016-07-04' '2016-07-05'\n '2016-07-06' '2016-07-07' '2016-07-08' '2016-07-09' '2016-07-10'\n '2016-07-11' '2016-07-12' '2016-07-13' '2016-07-14' '2016-07-15'\n '2016-07-16' '2016-07-17' '2016-07-18' '2016-07-19' '2016-07-20'\n '2016-07-21' '2016-07-22' '2016-07-23' '2016-07-24' '2016-07-25'\n '2016-07-26' '2016-07-27' '2016-07-28' '2016-07-29' '2016-07-30'\n '2016-07-31']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 得到一个月的所有日期\n",
+    "Z = np.arange('2016-07', '2016-08', dtype='datetime64[D]')\n",
+    "print(Z)"
    ]
   },
   {
