--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -14,13 +14,16 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3710jvsc74a57bd0905bede0b9d3779632e1b138e212cea750ec90152560e0dbe1d46137b0a12b61",
+   "name": "python3",
    "display_name": "Python 3.7.10 64-bit ('dynamicgcn': conda)"
   },
   "metadata": {
    "interpreter": {
     "hash": "72506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624"
    }
+  },
+  "interpreter": {
+   "hash": "905bede0b9d3779632e1b138e212cea750ec90152560e0dbe1d46137b0a12b61"
   }
  },
  "nbformat": 4,
@@ -2090,6 +2093,26 @@
   },
   {
    "source": [
+    "### xlrd"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# w = xlrd.open_workbook(path)\n",
+    "# w.sheet_names()\n",
+    "# s = w.sheet_by_index(0)\n",
+    "# s.nrows s.ncols\n",
+    "# s.row_values(i) i是行索引"
+   ]
+  },
+  {
+   "source": [
     "### datetime"
    ],
    "cell_type": "markdown",
@@ -2405,26 +2428,6 @@
   },
   {
    "source": [
-    "### Pandas"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 扩展Pandas中显示的列和行数\n",
-    "## Pandas表中显示的行和列数量有限，可以根据自己的喜好进行自定义。\n",
-    "import pandas as pd\n",
-    "pd.set_option('display.max_rows', 500)\n",
-    "pd.set_option('display.max_columns', 500)"
-   ]
-  },
-  {
-   "source": [
     "### Matplotlib"
    ],
    "cell_type": "markdown",
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2569,6 +2572,28 @@
     "print(np.zeros((2,3))) # 这是一个null矩阵，可添加参数dtype=int指明类型\n",
     "print(np.arange(10,50))\n",
     "print(np.arange(9).reshape(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "# .ravel() 展成一维数组\n",
+    "a = np.zeros((2,3))\n",
+    "a.ravel()"
    ]
   },
   {
@@ -2976,6 +3001,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.column_stack 按列合并\n",
+    "# np.row_stack 按行合并"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2988,7 +3023,7 @@
     }
    ],
    "source": [
-    "# np,nan | np.inf\n",
+    "# np.nan | np.inf\n",
     "print(0 * np.nan)\n",
     "print(np.nan == np.nan)\n",
     "print(np.inf > np.nan)\n",
@@ -3757,7 +3792,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pandas.read_excel(path, 'sheet1')"
+    "# 扩展Pandas中显示的列和行数\n",
+    "## Pandas表中显示的行和列数量有限，可以根据自己的喜好进行自定义。\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)"
    ]
   },
   {
@@ -3766,7 +3805,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.head() # 默认返回前5行数据"
+    "# pandas.read_excel(path, 'sheet1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   color_blue  color_green  color_red  class_A  class_B\n",
+       "0           0            1          0        1        0\n",
+       "1           0            0          1        0        1\n",
+       "2           1            0          0        1        0"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>color_blue</th>\n      <th>color_green</th>\n      <th>color_red</th>\n      <th>class_A</th>\n      <th>class_B</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "# pd.get_dummies 实现one-hot\n",
+    "df = pd.DataFrame([  \n",
+    "            ['green' , 'A'],   \n",
+    "            ['red'   , 'B'],   \n",
+    "            ['blue'  , 'A']])  \n",
+    "\n",
+    "df.columns = ['color',  'class'] \n",
+    "pd.get_dummies(df) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   name  mark  gender\n0  zhao   150  female\n1  qian   122  female\n2   sun   155    male\n3  wang   132    male\n   name  mark  gender\n0  zhao   150  female\n   name  mark  gender\n0  zhao   150  female\n2   sun   155    male\n   name  mark  gender\n2   sun   155    male\n1  qian   122  female\n3  wang   132    male\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df.head() # 默认返回前5行数据\n",
+    "# df.sample\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'name':['zhao','qian','sun','wang'],'mark':[150,122,155,132],'gender':['female','female','male','male']})\n",
+    "print(df)\n",
+    "print(df.head(1))\n",
+    "print(df.sample(2))\n",
+    "print(df.sample(frac=0.75))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "RangeIndex(start=0, stop=4, step=1)\n4\nname       sun\nmark       155\ngender    male\nName: 2, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .index | .iloc[]\n",
+    "print(df.index)\n",
+    "print(len(df.index))\n",
+    "print(df.iloc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.dropna(inplace=True) 能够找到DataFrame类型数据的空值（缺失值），将空值所在的行/列删除后，将新的DataFrame作为返回值返回。参数how: 筛选方式。‘any’，表示该行/列只要有一个以上的空值，就删除该行/列；‘all’，表示该行/列全部都为空值，就删除该行/列。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.apply()"
+   ]
+  },
+  {
+   "source": [
+    "### sklearn"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import KMeans\n",
+    "# kmeans = KMeans(n_clusters).fit(embeddings)\n",
+    "# kmeans.labels_"
    ]
   },
   {
