--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -2358,6 +2358,40 @@
   },
   {
    "source": [
+    "### 损失函数"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.BCELoss"
+   ]
+  },
+  {
+   "source": [
+    "### 激活函数"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.Softmax\n",
+    "# nn.ReLU()\n",
+    "# nn.Sigmoid()"
+   ]
+  },
+  {
+   "source": [
     "### 其他"
    ],
    "cell_type": "markdown",
@@ -2370,6 +2404,15 @@
    "outputs": [],
    "source": [
     "# torch.nn.BatchNorm2d(num_features） 默认是有可学习的参数，若affine=False则无"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.Dropout"
    ]
   },
   {
