--- a/tutorials/word_embedding/basics.ipynb
+++ b/tutorials/word_embedding/basics.ipynb
@@ -14,18 +14,49 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python379jvsc74a57bd0cc86fbc300e6d473e5cf532321586f93c8d337e756c8fe34a22a2b65e82a1ba0",
+   "name": "python3",
    "display_name": "Python 3.7.9 64-bit ('piprnn': conda)"
   },
   "metadata": {
    "interpreter": {
     "hash": "72506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624"
    }
+  },
+  "interpreter": {
+   "hash": "cc86fbc300e6d473e5cf532321586f93c8d337e756c8fe34a22a2b65e82a1ba0"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "source": [
+    "## Word2vec"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = gensim.models.Word2Vec(text_list, min_count, window, size, sg, iter)\n",
+    "# model.wv.index2word\n",
+    "# model.wv.vectors\n",
+    "# embeddings_index = dict(zip(model.wv.index2word, model.wv.vectors))"
+   ]
+  },
   {
    "source": [
     "## FastText"
