--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -2300,6 +2300,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# heapq.nlargest(K, list)"
+   ]
+  },
+  {
    "source": [
     "### collections"
    ],
@@ -2703,7 +2712,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.eye(3) | np.ones((10,10))"
+    "# np.eye(3) | np.ones((10,10))\n",
+    "# np.full 构造一个数组，用指定值填充其元素\n",
+    "# np.empty 构造一个长度为 shape 的未初始化数组，这个数组的元素可能是内存位置上存在的任何数值"
    ]
   },
   {
@@ -2952,6 +2963,29 @@
     "# np.tile\n",
     "Z = np.tile( np.array([[0,1],[1,0]]), 4) \n",
     "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "np.tile(np.array([1,0]), (4,1))"
    ]
   },
   {
@@ -3805,6 +3839,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for idx, row in df.iterrows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# pandas.read_excel(path, 'sheet1')"
    ]
   },
@@ -3878,6 +3921,8 @@
    ],
    "source": [
     "# .index | .iloc[]\n",
+    "# df.loc[df.user_id == u_id]\n",
+    "# df.iat[0,1] 第一个参数为行索引，第二个为列索引\n",
     "print(df.index)\n",
     "print(len(df.index))\n",
     "print(df.iloc[2])"
@@ -3911,6 +3956,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.sort_values(by='time', ascending=True) 其中time是列名\n",
+    "    # df.sort_values(by=['user_id', 'time'], ascending=[True, True])\n",
+    "# df.reset_index(drop=True) drop=True表示把原来的索引index列去掉，重置index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取数据可以是df['time']或df.time\n",
+    "# df.time.unique()\n",
+    "# df.time.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_df = pd.DataFrame()\n",
+    "# new_df = new_df.append(df, ignore_index=True)"
+   ]
+  },
+  {
    "source": [
     "### sklearn"
    ],
@@ -3926,6 +4003,64 @@
     "from sklearn import KMeans\n",
     "# kmeans = KMeans(n_clusters).fit(embeddings)\n",
     "# kmeans.labels_"
+   ]
+  },
+  {
+   "source": [
+    "### scipy"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  (1, 2)\t2.0\n  (2, 2)\t2.0\n  (2, 3)\t1.0\n  (2, 4)\t3.0\n---------------------\n  (0, 2)\t2.0\n  (0, 3)\t1.0\n  (0, 4)\t3.0\n---------------------\n[2 3 4]\n(array([0, 0, 0], dtype=int32), array([2, 3, 4], dtype=int32))\ndict_values([2.0, 1.0, 3.0])\n====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.sparse as sp\n",
+    "# Dictionary of keys(DOK)\n",
+    "a = sp.dok_matrix((3, 10))\n",
+    "a[1, 2] = 2\n",
+    "a[2, 2] = 2\n",
+    "a[2, 3] = 1\n",
+    "a[2, 4] = 3\n",
+    "print(a)\n",
+    "print('---------------------')\n",
+    "print(a[2])\n",
+    "print('---------------------')\n",
+    "print(a[2].nonzero()[1])\n",
+    "print(a[2].nonzero())\n",
+    "print(a[2].values())\n",
+    "print('====================')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "dict_keys([(1, 2), (2, 2), (2, 3), (2, 4)])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "a.keys()"
    ]
   },
   {
