--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -14,13 +14,16 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python379jvsc74a57bd0cc86fbc300e6d473e5cf532321586f93c8d337e756c8fe34a22a2b65e82a1ba0",
+   "name": "python3",
    "display_name": "Python 3.7.9 64-bit ('piprnn': conda)"
   },
   "metadata": {
    "interpreter": {
     "hash": "72506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624"
    }
+  },
+  "interpreter": {
+   "hash": "cc86fbc300e6d473e5cf532321586f93c8d337e756c8fe34a22a2b65e82a1ba0"
   }
  },
  "nbformat": 4,
@@ -2381,13 +2384,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# nn.Softmax\n",
     "# nn.ReLU()\n",
-    "# nn.Sigmoid()"
+    "# nn.Sigmoid()\n",
+    "# nn.Tanh()\n",
+    "# nn.LeakyReLU(0.1)"
+   ]
+  },
+  {
+   "source": [
+    "### 变换"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.Embedding\n",
+    "# nn.Linear"
+   ]
+  },
+  {
+   "source": [
+    "### 初始化"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.init.normal_()\n",
+    "# nn.init.xavier_normal_()"
+   ]
+  },
+  {
+   "source": [
+    "### 网络相关"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.Module\n",
+    "# nn.Sequential()"
+   ]
+  },
+  {
+   "source": [
+    "### nn.functional as F"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# F.sigmoid"
    ]
   },
   {
@@ -2413,6 +2485,15 @@
    "outputs": [],
    "source": [
     "# nn.Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nn.utils.clip_grad_norm_()"
    ]
   },
   {
