--- a/tutorials/word_embedding/basics.ipynb
+++ b/tutorials/word_embedding/basics.ipynb
@@ -51,9 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = gensim.models.Word2Vec(text_list, min_count, window, size, sg, iter)\n",
+    "# model = gensim.models.Word2Vec(text_list, workers, min_count, window, vector_size, sg, iter) 其中text_list列表中每一个元素可以是空格隔开的字符串，或是其他分隔符号如逗号隔开的字符串\n",
     "# model.wv.index2word\n",
     "# model.wv.vectors\n",
+    "# model.wv[w]得到w对应的向量\n",
     "# embeddings_index = dict(zip(model.wv.index2word, model.wv.vectors))"
    ]
   },
