update with Search a 2D Matrix

--- a/leetcodes/array_matrix.ipynb
+++ b/leetcodes/array_matrix.ipynb
@@ -335,7 +335,24 @@
     "        if vertical_found or horizontal_found:\n",
     "            return True\n",
     "    \n",
-    "    return False"
+    "    return False\n",
+    "# 从左下角开始\n",
+    "def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "        if matrix == None or len(matrix) == 0 or len(matrix[0]) == 0:\n",
+    "            return False\n",
+    "\n",
+    "        rows, columns = len(matrix), len(matrix[0])\n",
+    "        row = rows - 1\n",
+    "        column = 0\n",
+    "        while column < columns and row >= 0:\n",
+    "            num = matrix[row][column]\n",
+    "            if num == target:\n",
+    "                return True\n",
+    "            elif num > target:\n",
+    "                row -= 1\n",
+    "            else:\n",
+    "                column += 1\n",
+    "        return False"
    ]
   },
   {
